--- a/css/style.css
+++ b/css/style.css
@@ -7,33 +7,41 @@
 }
 
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   text-align: center;
   background-color: rgb(46, 44, 44);
   height: 100vh;
   font-family: "Oxanium", cursive;
 }
+
 main {
   display: inline-block;
-
+  height: 76%;
   padding: 10px;
+  transform: translate(0, 12%);
   position: relative;
 }
-.nav-pikachu {
+/* .nav-pikachu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100px;
-  max-width: 430px;
+
   overflow: hidden;
   position: absolute;
-  top: 0;
+  top: 1.5%;
   z-index: 1000;
   border-radius: 30px;
 }
+.container-pikachu {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  max-width: 400px;
+} */
 .pikachu {
   position: absolute;
-  top: 0;
+  top: -56px;
   left: 0;
   width: 100px;
   animation: 2.5s run linear infinite;
@@ -58,6 +66,7 @@ main {
 .pokedex {
   width: 100%;
   max-width: 430px;
+  height: 100%;
 }
 .img-container {
   display: flex;
@@ -80,7 +89,7 @@ main {
   position: absolute;
   font-weight: 600;
   color: #aaa;
-  top: 53%;
+  top: 54%;
   right: 28%;
   font-size: clamp(8px, 5vw, 25px);
 }
